--- a/Rest-APIs/views/index.ejs
+++ b/Rest-APIs/views/index.ejs
@@ -9,11 +9,11 @@
   <body>
     <h1>Quora Posts</h1>
     <% for(post of posts){ %>
-
     <div class="post">
       <h3 class="username">@<%= post.username %></h3>
       <h4 class="content"><%= post.content%></h4>
     </div>
     <% } %>
+    <a href="http://localhost:3000/posts/new">create a new post</a>
   </body>
 </html>
