--- a/Rest-APIs/views/index.ejs
+++ b/Rest-APIs/views/index.ejs
@@ -12,6 +12,9 @@
     <div class="post">
       <h3 class="username">@<%= post.username %></h3>
       <h4 class="content"><%= post.content%></h4>
+
+      <a href="http://localhost:3000/posts/<%=post.id%>">show in detail</a>
+      <a style="margin-left: 200px;" href="http://localhost:3000/posts/<%=post.id%>/edit">Edit</a>
     </div>
     <% } %>
     <a href="http://localhost:3000/posts/new">create a new post</a>
